--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ retry>=0.9.2             # Retry mechanisms
 uvloop>=0.16.0           # Fast event loop
 memray>=1.5.0            # Memory profiling
 numpy>=1.23.2            # Numerical operations
+python-nmap>=0.7.1       # Network scanning
 
 # Optional GUI dependencies (uncomment if needed)
 # PyGObject>=3.36.0
